--- a/tpl/Admin/Nav/index.html
+++ b/tpl/Admin/Nav/index.html
@@ -20,7 +20,7 @@
 <script src="__ADMIN_JS__/nav.js" type="text/javascript" charset="utf-8"></script>
 
 <div id='Loading' style="position:absolute;z-index:1000;top:0px;left:0px;width:100%;height:100%;background:#fff ;text-align:center;padding-top: 10%;">
-	<h1><image src="/rensheju1/tpl/Public/images/loading3.gif"/></h1>
+	<!--<h1><image src="/rensheju1/tpl/Public/images/loading3.gif"/></h1>-->
 </div>
 <table id="menuGrid" class="easyui-treegrid" style="width:92%;height:800px" url="{:U('Admin/Nav/Menus')}" toolbar="#toolbar" pagination="true" idField="id" treeField="name" >
 	<thead>
@@ -50,7 +50,7 @@
 			<tr>
 				<td>上级菜单:</td>
 				<td>
-					<input id="pid" name="pid" class="easyui-combobox pidedit" url="{:U('Admin/Nav/menuLevel',array('pid'=>0))}" valueField="id" textField="name">
+					<input id="pid" name="pid" class="easyui-combobox" url="{:U('Admin/Nav/menuLevel',array('pid'=>0))}" valueField="id" textField="name">
 				</td>
 			</tr>
 			<tr>
