--- a/tpl/Admin/Notice/index.html
+++ b/tpl/Admin/Notice/index.html
@@ -1,46 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="__EASYUI__/themes/default/easyui.css" rel="stylesheet" />
-    <link href="__EASYUI__/themes/color.css" rel="stylesheet" />
-    <link href="__EASYUI__/themes/icon.css" rel="stylesheet" />
-    <link href="__KINDEDITOR__/themes/default/default.css" rel="stylesheet" />
+    <meta charset="utf-8" />
+    <title>管理后台</title>
     <script src="__EASYUI__/jquery.min.js"></script>
     <script src="__EASYUI__/jquery.easyui.min.js"></script>
     <script src="__EASYUI__/locale/easyui-lang-zh_CN.js"></script>
+    <link rel="stylesheet" href="__EASYUI__/super/css/font-awesome.min.css">
+    <link rel="stylesheet" href="__EASYUI__/super/superRed.css" id="themeCss">
+    <script src="__EASYUI__/super/super.js"></script>
+    <script src="__ADMIN_JS__/index.js" type="text/javascript" charset="utf-8"></script>
+
+    <link href="__PUBLIC__/statics/css/admin.css" rel="stylesheet" />
     <script src="__EASYUI__/common.js"></script>
-    <script src="__KINDEDITOR__/kindeditor-all-min.js"></script>
-    <script>
-        var editor;
-        KindEditor.ready(function(K) {
-            editor = K.create('.addintro', {
-                allowFileManager : false
-            });
-        });
-        var editor2;
-        KindEditor.ready(function(K) {
-            editor2 = K.create('.editcontent', {
-                allowFileManager : false
-            });
-        });
-    </script>
+    <script src="__EASYUI__/formatter.js"></script>
+    <script src="__EASYUI__/extend/validate.js"></script>
+    <script src="__KINDEDITOR__/kindeditor-all.js"></script>
+    <script src="__KINDEDITOR__/lang/zh-CN.js"></script>
 </head>
-<body>
-<div id='Loading' style="position:absolute;z-index:1000;top:0px;left:0px;width:100%;height:100%;background:#fff ;text-align:center;padding-top: 10%;">
-    <h1><image src="/rensheju1/tpl/Public/images/loading3.gif"/></h1>
-</div>
-<table id="noticeGrid" class="easyui-datagrid" style="width:92%;height:800px" url="{:U('Admin/Notice/ajaxNoticeList')}" pagination="true"  toolbar="#toolbar" singleSelect="true" rownumbers="true">
+<body style="padding: 0">
+<!--<div id='Loading'><image src='__PUBLIC_IMAGES__/loading.gif'/>加载中....</div>-->
+<script src="__ADMIN_JS__/Notice.js" type="text/javascript" charset="utf-8"></script>
+<table id="noticeGrid" class="easyui-datagrid"  url="{:U('Admin/Notice/ajaxNoticeList')}" pagination="true"  toolbar="#toolbar_notice" singleSelect="true" rownumbers="true">
     <thead>
     <tr>
-        <th field="title" width="200" >标题</th>
-        <th field="intro" width="200" >内容</th>
+        <th field="title" width="300" >标题</th>
+        <th field="intro" width="1100" >内容</th>
     </tr>
     </thead>
 </table>
-<div id="toolbar">
-    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="addNotice()">添加</a>
-    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editNotice()">编辑</a>
-    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="destroyNotice()">删除</a>
+<div id="toolbar_notice">
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-plus" plain="true" onclick="addNotice()">添加</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-edit" plain="true" onclick="editNotice()">编辑</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-remove" plain="true" onclick="destroyNotice()">删除</a>
 </div>
 <!-- 添加 -->
 <div id="addNotice" class="easyui-dialog" title="添加" style="width:800px;height:650px;padding:10px 20px;" closed="true" modal="true">
@@ -56,8 +48,8 @@
             </tr>
             <tr>
                 <td></td>
-                <td><a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-ok" onclick="addNoticeSubmit()" style="width:90px">保存</a>
-                    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:$('#adNotice').dialog('close')" style="width:90px">取消</a></td>
+                <td><a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-check" onclick="addNoticeSubmit()" style="width:90px">保存</a>
+                    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-remove" onclick="javascript:$('#addNotice').dialog('close')" style="width:90px">取消</a></td>
             </tr>
         </table>
 
@@ -77,101 +69,20 @@
             </tr>
             <tr>
                 <td></td>
-                <td><a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-ok" onclick="editNoticeSubmit()" style="width:90px">保存</a>
-                    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:$('#editNotice').dialog('close')" style="width:90px">取消</a></td>
+                <td><a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-check" onclick="editNoticeSubmit()" style="width:90px">保存</a>
+                    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-remove" onclick="javascript:$('#editNotice').dialog('close')" style="width:90px">取消</a></td>
             </tr>
         </table>
 
     </form>
 </div>
+
+<div class="imgdlg"><img class="simg"></div>
 <script type="text/javascript">
-    var url;
-    function addNotice(){
-        $('#addNotice').dialog('open').dialog('setTitle','发布公告');
-        $('#addNoticeForm').form('clear');
-        url="{:U('Admin/Notice/add')}";
-    }
-    function addNoticeSubmit(){
-        $('.addintro').val(editor.html());
-        $('#addNoticeForm').form('submit',{
-            url: url,
-            onSubmit: function(){
-                return $(this).form('validate');
-            },
-            success:function(data){
-                data=$.parseJSON(data);
-                if(data.status==1){
-                    $.messager.alert('Info', data.message, 'info');
-                    $('#addNotice').dialog('close');
-                    $('#noticeGrid').datagrid('reload');
-                }else {
-                    $.messager.alert('Warning', data.message, 'info');
-                    $('#addNotice').dialog('close');
-                    $('#noticeGrid').datagrid('reload');
-                }
-            }
-        });
-        editor.html('');
-    }
-    function editNoticeSubmit(){
-        $('.editcontent').val(editor2.html());
-        $('#editNoticeForm').form('submit',{
-            url: url,
-            onSubmit: function(){
-                return $(this).form('validate');
-            },
-            success:function(data){
-                data=$.parseJSON(data);
-                if(data.status==1){
-                    $.messager.alert('Info', data.message, 'info');
-                    $('#editNotice').dialog('close');
-                    $('#noticeGrid').datagrid('reload');
-                    editor2.html('');
-                }else {
-                    $.messager.alert('Warning', data.message, 'info');
-                    $('#editNotice').dialog('close');
-                    $('#noticeGrid').datagrid('reload');
-                    editor2.html('');
-                }
-            }
-        });
-    }
-    //编辑会员对话窗
-    function editNotice(){
-        var row = $('#noticeGrid').datagrid('getSelected');
-        if(row==null){
-            $.messager.alert('Warning',"请选择要编辑的行", 'info');return false;
-        }
-        editor2.html(row.intro);
-        if (row){
-            $('#editNotice').dialog('open').dialog('setTitle','编辑');
-            $('#editNoticeForm').form('load',row);
-            url ="{:U('Admin/Notice/edit')}"+'/id/'+row.id;
-        }
-    }
-    function destroyNotice(){
-        var row = $('#noticeGrid').datagrid('getSelected');
-        if(row==null){
-            $.messager.alert('Warning',"请选择要删除的行", 'info');return false;
-        }
-        if (row){
-            $.messager.confirm('删除提示','真的要删除?',function(r){
-                if (r){
-                    var durl="{:U('Admin/Notice/delete')}";
-                    $.getJSON(durl,{id:row.id},function(result){
-                        if (result.status){
-                            $('#noticeGrid').datagrid('reload');    // reload the user data
-                        } else {
-                            $.messager.alert('错误提示',result.message,'error');
-                        }
-                    },'json').error(function(data){
-                        var info=eval('('+data.responseText+')');
-                        $.messager.confirm('错误提示',info.message,function(r){});
-                    });
-                }
-            });
-        }
-    }
+    var noticeAdd="{:U('Admin/Notice/add')}";
+    var noticeEdit="{:U('Admin/Notice/edit')}";
+    var noticeDelete="{:U('Admin/Notice/delete')}"
+
 </script>
 </body>
 </html>
