管理员所属乡镇的显示

--- a/tpl/Admin/BindKey/index.html
+++ b/tpl/Admin/BindKey/index.html
@@ -30,7 +30,7 @@
     <thead>
     <tr>
         <th field="key" width="200" >秘钥</th>
-        <th field="status" width="200" formatter="attrValue" >是否可用</th>
+        <th field="status" width="200" formatter="attrStatus" >是否可用</th>
         <th field="dizhi" width="200"formatter="attrValue" >城市</th>
         <th field="action" width="200" align="center" formatter="formatAction">操作</th>
     </tr>
