--- a/tpl/Admin/Rule/admin_user_list.html
+++ b/tpl/Admin/Rule/admin_user_list.html
@@ -31,6 +31,7 @@
     <tr>
         <th field="username" width="200" >账号</th>
         <th field="groupname" width="200" >用户组</th>
+        <th field="tname" width="200" >所属乡镇</th>
         <th field="email" width="200" >邮箱</th>
         <th field="phone" width="200" >电话</th>
         <th field="status" width="200" formatter="formatStatus">状态</th>
