--- a/tpl/Admin/AppWeixin/index.html
+++ b/tpl/Admin/AppWeixin/index.html
@@ -21,7 +21,7 @@
     </script>
 </head>
 <body>
-{__ADMIN_IMAGES__}
+<!--{__ADMIN_IMAGES__}-->
 <div id='Loading' style="position:absolute;z-index:1000;top:0px;left:0px;width:100%;height:100%;background:#fff ;text-align:center;padding-top: 10%;">
     <h1><image src="/rensheju1/tpl/Public/images/loading3.gif"/></h1>
 </div>
