--- a/tpl/Admin/Worker/index.html
+++ b/tpl/Admin/Worker/index.html
@@ -78,7 +78,7 @@
             </tr>
             <tr>
                 <td>开户行:</td>
-                <td><input name="bank" class="easyui-textbox" data-options="delay:1000,required:true,validType:'checkFloat',height:30" />
+                <td><input name="bank" class="easyui-textbox" data-options="delay:1000,required:true,height:30" />
                 </td>
             </tr>
             <tr>
@@ -131,7 +131,7 @@
             </tr>
             <tr>
                 <td>开户行:</td>
-                <td><input name="bank" class="easyui-textbox" data-options="delay:1000,required:true,validType:'checkFloat',height:30" />
+                <td><input name="bank" class="easyui-textbox" data-options="delay:1000,required:true,height:30" />
                 </td>
             </tr>
             <tr>
