--- a/tpl/Admin/App/index.html
+++ b/tpl/Admin/App/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="__EASYUI__/themes/default/easyui.css" rel="stylesheet" />
-    <link href="__EASYUI__/themes/color.css" rel="stylesheet" />
-    <link href="__EASYUI__/themes/icon.css" rel="stylesheet" />
     <script src="__EASYUI__/jquery.min.js"></script>
     <script src="__EASYUI__/jquery.easyui.min.js"></script>
+    <script src="__EASYUI__/locale/easyui-lang-zh_CN.js"></script>
+    <script src="__EASYUI__/ajaxSetup.js"></script>
+    <link rel="stylesheet" href="__EASYUI__/super/css/font-awesome.min.css">
+    <link rel="stylesheet" href="__EASYUI__/super/superRed.css" id="themeCss">
+    <script src="__EASYUI__/super/super.js"></script>
+    <script src="__ADMIN_JS__/index.js" type="text/javascript" charset="utf-8"></script>
+
+    <link href="__PUBLIC__/statics/css/admin.css" rel="stylesheet" />
+    <script src="__EASYUI__/common.js"></script>
     <script src="__EASYUI__/formatter.js"></script>
     <script src="__EASYUI__/extend/validate.js"></script>
-    <script src="__EASYUI__/locale/easyui-lang-zh_CN.js"></script>
-    <script src="__EASYUI__/common.js"></script>
+    <script src="__KINDEDITOR__/kindeditor-all.js"></script>
+    <script src="__KINDEDITOR__/lang/zh-CN.js"></script>
     <script type="text/javascript">
         var addCustomerUrl="{:U('Admin/App/add')}";
         var editCustomerUrl="{:U('Admin/App/edit')}";
         var deleteCustomerUrl="{:U('Admin/App/delete')}";
     </script>
 </head>
-<body>
-<div id='Loading' style="position:absolute;z-index:1000;top:0px;left:0px;width:100%;height:100%;background:#fff ;text-align:center;padding-top: 10%;">
-    <h1><image src='__PUBLIC_IMAGES__/loading3.gif'/></h1></div>
+<body style="padding: 0">
+<div id='Loading'><image src='__PUBLIC_IMAGES__/loading.gif'/>加载中....</div>
 <script src="__ADMIN_JS__/app.js" type="text/javascript" charset="utf-8"></script>
 <table id="CustomerGrid" class="easyui-datagrid" style="width:92%;height:800px" url="{:U('Admin/App/ajaxCustomerList')}" pagination="true"  toolbar="#toolbar_Customer" singleSelect="true" rownumbers="true">
     <thead>
     <tr>
         <th field="phone" width="200" >手机号</th>
-        <th field="villagename" width="200" >所属村镇</th>
     </tr>
     </thead>
 </table>
 <div id="toolbar_Customer">
-    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="addCustomer()">添加</a>
-    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editCustomer()">编辑</a>
-    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="destroyCustomer()">删除</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-plus" plain="true" onclick="addCustomer()">添加</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-edit" plain="true" onclick="editCustomer()">编辑</a>
+    <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="fa fa-remove" plain="true" onclick="destroyCustomer()">删除</a>
 </div>
 <!-- 添加 -->
 <div id="addCustomer" class="easyui-dialog" title="添加" style="width:400px;padding:10px 20px;" closed="true" modal="true">
