--- a/tpl/Admin/Person/index.html
+++ b/tpl/Admin/Person/index.html
@@ -21,10 +21,8 @@
         var imgUrl="{:C('GLOBAL_PIC_URL')}";
     </script>
 </head>
-<body>
-<div id='Loading' style="position:absolute;z-index:1000;top:0px;left:0px;width:100%;height:100%;background:#fff ;text-align:center;padding-top: 10%;">
-    <h1><image src="/rensheju/tpl/Public/images/loading3.gif"/></h1>
-</div>
+<body style="padding: 0">
+<div id='Loading'><image src='__PUBLIC_IMAGES__/loading.gif'/>加载中....</div>
 <script src="__ADMIN_JS__/Person.js" type="text/javascript" charset="utf-8"></script>
 <table id="PersonGrid" class="easyui-datagrid" style="width:92%;height:670px" url="{:U('Admin/Person/ajaxPersonList')}" pagination="true" toolbar="#toolbar_Person" singleSelect="true" rownumbers="true" pageSize="20">
     <thead>
