增加所属乡镇

--- a/tpl/Admin/Worker/index.html
+++ b/tpl/Admin/Worker/index.html
@@ -38,6 +38,7 @@
         <th field="banknum" width="270" >卡号</th>
         <th field="headimg" width="190" formatter="imgFormatter">头像</th>
         <th field="villagename" width="270" >所属乡镇</th>
+        <th field="townname" width="270" >所属村</th>
 
     </tr>
     </thead>
